# vellora

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.md  README.ru.md  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wdio.conf.js  wdio.desktop.conf.js
.github/workflows/: ci.yml  release.yml
docs/: native-menu-nsis-walkthrough.md
scripts/: run-e2e.mjs
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: henry.w@example.net
src-tauri/permissions/: commands.toml
src-tauri/src/: file_access.rs  image_access.rs  launch_args.rs  lib.rs  link_access.rs  main.rs  path_policy.rs  types.rs
src/api/: tauri.ts
src/main/: documentWrite.test.ts  documentWrite.ts  fileAccess.test.ts  fileAccess.ts  imageAccess.test.ts  imageAccess.ts  index.ts  ipc.test.ts  ipc.ts  launchArguments.test.ts  launchArguments.ts  linkAccess.test.ts  linkAccess.ts  nativeMenu.test.ts  nativeMenu.ts  openDialog.test.ts  openDialog.ts  pathPolicy.ts  paths.test.ts  paths.ts  pdfExport.test.ts  pdfExport.ts  recentStore.test.ts  recentStore.ts  security.test.ts  security.ts  workspaceAccess.test.ts  workspaceAccess.ts
src/markdown/: editableMarkdown.test.ts  editableMarkdown.ts  renderMarkdown.test.ts  renderMarkdown.ts  resolveImages.test.ts  resolveImages.ts  searchHtml.ts
src/preload/: index.ts  types.test.ts  types.ts
src/renderer/: index.html
src/shared/: documentTypes.ts  ipcChannels.test.ts  ipcChannels.ts  mainI18n.test.ts  mainI18n.ts
tests/e2e/: desktop-processes.mjs  desktop-processes.test.mjs  run-desktop.mjs  smoke.desktop.spec.js  smoke.mjs  smoke.spec.js  stage1.spec.ts  stage2.spec.ts  stage3.spec.ts  stage4.spec.ts  stage5.spec.ts  stage6.spec.ts  stage7.spec.ts  stage8.spec.ts
tests/stage8/: packaging.test.ts
tools/: check-version.mjs  fetch-msedgedriver.mjs
(+22 files in other folders)
