[package]
name = "vellora"
version = "2.1.0"
description = "Vellora lightweight Markdown viewer and editor"
authors = ["Vellora Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "vellora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
open = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"

# Production / desktop E2E must enable this so the app loads embedded frontendDist
# instead of devUrl (http://localhost:1420). `tauri build` enables it; plain
# `cargo build --release` must pass `--features custom-protocol` (see run-desktop.mjs).
[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
